# water_bb

./: .dir-locals.el  .gitignore  .gitmodules  CMakeLists.txt  README.md  gdd.md  uml.mdj
src/testing/: test1.cpp
src/water_bb/: boat.cpp  boat.h  cursor.cpp  cursor.h  island.cpp  island.h  main.cpp  parameters.h  sounds.h  sprite.h  warboat.cpp  warboat.h  worker_boat.cpp  worker_boat.h
